crates/normalize-typegen/tests/snapshots/codegen__go_types_user.snap
---
source: crates/normalize-typegen/tests/codegen.rs
assertion_line: 194
expression: output
---
// Auto-generated by normalize-typegen

package models

// Address Physical address
type Address struct {
	City string `json:"city"`
	Country string `json:"country"`
	PostalCode *string `json:"postalCode,omitempty"`
	Street string `json:"street"`
}

// Status User account status
type Status string

const (
	StatusPending Status = "pending"
	StatusActive Status = "active"
	StatusSuspended Status = "suspended"
	StatusDeleted Status = "deleted"
)

// User A user account
type User struct {
	Address *Address `json:"address,omitempty"`
	Age *int64 `json:"age,omitempty"`
	// Email address
	Email string `json:"email"`
	// Unique identifier
	Id string `json:"id"`
	Metadata map[string]string `json:"metadata,omitempty"`
	Name *string `json:"name,omitempty"`
	Status Status `json:"status"`
	Tags []string `json:"tags,omitempty"`
}
