crates/normalize-typegen/tests/snapshots/codegen__python_dataclass_user.snap
---
source: crates/normalize-typegen/tests/codegen.rs
assertion_line: 127
expression: output
---
# Auto-generated by normalize-typegen

from dataclasses import dataclass
from typing import Optional, dict, list
from typing import Literal

"""Physical address"""
@dataclass
class Address:
    city: str
    country: str
    street: str
    postal_code: Optional[str] = None

"""User account status"""
Status = Literal[
    "pending",
    "active",
    "suspended",
    "deleted"
]

"""A user account"""
@dataclass
class User:
    # Email address
    email: str
    # Unique identifier
    id: str
    status: Status
    address: Optional[Address] = None
    age: Optional[int] = None
    metadata: Optional[dict[str, str]] = None
    name: Optional[str] = None
    tags: Optional[list[str]] = None
